--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "codesinging@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "laravel/framework": "^8.62"
+    },
     "autoload": {
         "psr-4": {
             "CodeSinging\\PinAdmin\\": "src"
