--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,20 @@
     },
     "require-dev": {
         "orchestra/testbench": "^6.21"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "CodeSinging\\PinAdmin\\Tests\\": "tests"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "CodeSinging\\PinAdmin\\Foundation\\AdminServiceProvider"
+            ],
+            "aliases": {
+                "Admin": "CodeSinging\\PinAdmin\\Facades\\Admin"
+            }
+        }
     }
 }
