Continue to improve the foundation classes

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
     "autoload": {
         "psr-4": {
             "CodeSinging\\PinAdmin\\": "src"
-        }
+        },
+        "files": [
+            "src/Support/helpers.php"
+        ]
     },
     "require-dev": {
         "orchestra/testbench": "^6.21"
